# ESP-Camera

./: .gitignore  CMakeLists.txt  README.md  capture_wifi.py  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c  secrets.h.template
main/camera/: camera.c  camera.h
main/settings/: CMakeLists.txt  settings.c  settings.h
main/web_server/: web_server.c  web_server.h
main/wifi/: wifi.c  wifi.h
